-issue#611: Cacti Installation Wizard - Spine page incorrect on Windows
-issue#612: Uncaught Error: Call to a member function row() on a string
-issue#613: Network Automation, now requires a site or your are unable to save rules
-issue#615: Data Input field length too short for longer scripts
-issue#619: Export logging option in settings no longer used

1.1.4
-issue#524: Reporting not working when Tree branch is device
-issue#560: Add 'Duplicate' and 'Convert to Graph Template' back to Graph Management page for Advanced mode
-issue#573: Missing Graph Template dropdown items
-issue#575: Very large hex strings result in scientific notation that RRDtool rejects
-issue#579: Problems logging in using nginx web server
-issue#581: session_start() warnings when manually sending reports
-issue#584: Issues reporting memory recommendation on utilities page
-issue#586: Overrunning pollers can cause system load spikes
-issue#587: Data Collector setting under Network Discovery is not being used
-issue#588: Devices with blank sysDescr are added to the first Device Template in error
-issue#589: Automation discovery does not allow site association
-issue#590: Unable to create a plugin based menu
-issue#591: Row selection in Device Automation Templates not sane with drag-n-drop enabled
-issue#601: Resolving some translation issues
-issue#604: Unexpected backtrace on regular expression filters
-issue#605: Remove Spikes non-numeric data causes warnings
-issue: Ping email does not use a from email address
-issue: Automation does not recognize default size or poller
-issue: Unable to drag-n-drop on automation templates pages when enabled
-issue: Fixed number of hosts in poller stats for first poller
-issue: Fixed screenwidth issue in tab PHP-Info of Utilities module
-issue: Recovery poller could get stuck in some situations
-issue: Fix JavaScript errors when managing Aggregate Graphs
-feature: Reorganize defaults to place more on device defaults page